Get set profiles.

--- a/GoLocal/src/pages/createAccount/createAccount.html
+++ b/GoLocal/src/pages/createAccount/createAccount.html
@@ -33,8 +33,12 @@
   </ion-list>
   <ion-list>
     <ion-item>
-      <ion-label stacked>Full Name</ion-label>
-      <ion-input type="text" [(ngModel)]="fullname"></ion-input>
+      <ion-label stacked>First Name</ion-label>
+      <ion-input type="text" [(ngModel)]="firstname"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label stacked>Last Name</ion-label>
+      <ion-input type="text" [(ngModel)]="lastname"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label stacked>Contact</ion-label>
