--- a/GoLocal/src/pages/profile/profile.html
+++ b/GoLocal/src/pages/profile/profile.html
@@ -43,7 +43,7 @@
       </ion-row>
       <ion-row class="title">
         <ion-col col-8>
-          <div class="name" *ngIf="!editingName" float-left>{{profile.name}}</div>
+          <div class="name" *ngIf="!editingName" float-left>{{profile.fname}} {{profile.lname}}</div>
           <div class="name" float-left><ion-input *ngIf="editingName" [(ngModel)]="profile.name"></ion-input></div>
           <div float-right>
             <button ion-button *ngIf="editProfile" (click)="editName()"><ion-icon name="create"></ion-icon></button>
