Fix showing user activities.

--- a/GoLocal/src/pages/activity/activity.html
+++ b/GoLocal/src/pages/activity/activity.html
@@ -144,6 +144,15 @@
 
   </ion-row>
       
-
+  <h2>Reviews</h2>
+  <ion-row>
+    <ion-col col-4>
+      <p>username</p>
+      <p>rating</p>
+    </ion-col>
+    <ion-col>
+      Comment
+    </ion-col>
+  </ion-row>
   
 </ion-content>
