--- a/GoLocal/src/pages/home/home.html
+++ b/GoLocal/src/pages/home/home.html
@@ -74,7 +74,7 @@
 
       <ion-row class="activity-row">
           <div class="activity-container" *ngFor="let activity of activities_featured" (click)="goToActivity(activity)">
-            <!-- <ion-row class="activity-header"><img src = {{activity.val.images[0].file}}/></ion-row> -->
+            <ion-row class="activity-header"><img src = {{activity.image}}/></ion-row>
             <ion-row class="activity-footer">
               <ion-item class="line" text-wrap>
                 {{activity.title}} 
