--- a/GoLocal/src/pages/payment/payment.html
+++ b/GoLocal/src/pages/payment/payment.html
@@ -18,7 +18,7 @@
     <ion-col col-1></ion-col>
 
     <ion-col col-7 class="activity-details">
-      <ion-row class="title">
+      <!-- <ion-row class="title">
         <ion-title>Billing Information</ion-title>
       </ion-row>
       <form>
@@ -38,7 +38,7 @@
             <ion-label>Province</ion-label>
             <ion-input type="text" [(ngModel)]="billing.province" name="province"></ion-input>
           </ion-item>
-      </form>
+      </form> -->
       <ion-row class="title">
           <ion-title>Payment Information</ion-title>
         </ion-row>
